# iddaabahisanaliz

futbol-analiz-tauri/: README.md  __iddaa_app_snippet_1.js  __iddaa_live.html  __iddaa_program.html  __iddaa_strings_filtered.txt  index.html  package-lock.json  package.json
futbol-analiz-tauri/.github/workflows/: release.yml
futbol-analiz-tauri/__iddaa_chunks/: %5BsportName%5D-0a5974b387700510.js  1056-b39e284dbaa7bca5.js  1664-436e8634ea5c907f.js  193-c041ccca52484ed5.js  2942-9319409d4898e75d.js  3206-16e2b272a2cc32ab.js  3287-c88f757e5c006e5c.js  3635-4a5214f128010168.js  4280-d13ba83a40a0b157.js  4379-0addb7fc6e6958b0.js  4721-a412a012bf2b5645.js  4900-324d0c0487cf0272.js  5479-3cf96f7322f29013.js  6862-a7af1e7e2e90e478.js  7410-092b74a592262842.js  7879-364c562ec6d45869.js  8073-4dfa712ecb44aa65.js  8163-75ace7d7a7df9d60.js  8776-d15273869cfea24c.js  9149-df62abe520cc0d83.js  9577-53d5bd572e6b4b57.js  _app-ca05a8549b78ab96.js  ad7f724d-21c572c09ac07b7a.js  framework-62fdebaa10081711.js  main-72d4ac70c988da8a.js  polyfills-42372ed130431b0a.js  webpack-ec1d7db226e45170.js
futbol-analiz-tauri/src/: main.js  styles.css
futbol-analiz-tauri/src-tauri/: Cargo.toml  tauri.conf.json
futbol-analiz-tauri/src-tauri/src/: commands.rs  engine.rs  lib.rs  models.rs
